// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/patientUsers GET / /patientUsers/:patientUserId - retrieve patientUser 1`] = `
Object {
  "avatarUrl": null,
  "birthDate": "1996-07-19T00:14:30.932Z",
  "email": "testpatientuser@test.com",
  "firstName": "Jack",
  "gender": null,
  "id": "b8665c97-1e98-41ac-bf13-090b742de400",
  "insuranceCarrier": null,
  "insuranceGroupId": null,
  "insuranceMemberId": null,
  "isEmailConfirmed": false,
  "isPhoneNumberConfirmed": false,
  "lastName": "Daniels",
  "patientUserFamilyId": null,
  "phoneNumber": "+16049999999",
}
`;

exports[`/patientUsers POST / /patientUsers/email - check if patientuser with given email exists - does not exist 1`] = `
Object {
  "entities": Object {},
  "exists": false,
}
`;

exports[`/patientUsers POST / /patientUsers/email - check if patientuser with given email exists - exists 1`] = `
Object {
  "entities": Object {},
  "exists": true,
}
`;

exports[`/patientUsers POST / /patientUsers/phoneNumber - check if patientuser with given phoneNumber exists - does not exist 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/patientUsers POST / /patientUsers/phoneNumber - check if patientuser with given phoneNumber exists - exists 1`] = `"There is already a user with that mobile number."`;

exports[`/widgets GET / /:accountId/embed - [no description] 1`] = `
Object {
  "entities": Object {},
}
`;
